project(Plugins)

add_subdirectory(visibility)
add_subdirectory(defenseModelLayer)
add_subdirectory(terrainlayer)
add_subdirectory(imagelayer)
add_subdirectory(featurelayer)
add_subdirectory(drawshapes)
add_subdirectory(earthfile)
add_subdirectory(drawline)
add_subdirectory(drawCircle)
add_subdirectory(drawPolygon)
add_subdirectory(drawSphere)
add_subdirectory(drawCone)
add_subdirectory(drawCapsule)
add_subdirectory(drawCylinder)
